[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Tasks/fundo task fios.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NewWireTask.gd" type="Script" id=2]

[node name="WiresTask" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FundoTaskFios" type="Sprite" parent="."]
position = Vector2( 180, 320 )
texture = ExtResource( 1 )

[node name="blueWire" type="Line2D" parent="."]
visible = false
position = Vector2( 25, 232 )
points = PoolVector2Array( 24, -77, 0, 0 )
width = 20.0
default_color = Color( 0.211765, 0, 1, 1 )

[node name="blueButton" type="TextureButton" parent="."]
margin_top = 136.0
margin_right = 69.0
margin_bottom = 176.0

[node name="greenWire" type="Line2D" parent="."]
visible = false
position = Vector2( 25, 232 )
points = PoolVector2Array( 25, 1, 0, 0 )
width = 20.0
default_color = Color( 0.415686, 0.745098, 0.188235, 1 )

[node name="greenButton" type="TextureButton" parent="."]
margin_top = 217.0
margin_right = 69.0
margin_bottom = 257.0

[node name="yellowWire" type="Line2D" parent="."]
visible = false
position = Vector2( 25, 232 )
points = PoolVector2Array( 25, 85, 0, 0 )
width = 20.0
default_color = Color( 0.984314, 0.94902, 0.211765, 1 )

[node name="yellowButton" type="TextureButton" parent="."]
margin_top = 296.0
margin_right = 69.0
margin_bottom = 336.0

[node name="pinkWire" type="Line2D" parent="."]
visible = false
position = Vector2( 25, 232 )
points = PoolVector2Array( 25, 163, 0, 0 )
width = 20.0
default_color = Color( 0.843137, 0.482353, 0.729412, 1 )

[node name="pinkButton" type="TextureButton" parent="."]
margin_top = 375.0
margin_right = 69.0
margin_bottom = 415.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0, 1, 0.0156863, 0.298039 )

[connection signal="button_down" from="blueButton" to="." method="_on_blueButton_button_down"]
[connection signal="button_up" from="blueButton" to="." method="_on_blueButton_button_up"]
[connection signal="button_down" from="greenButton" to="." method="_on_greenButton_button_down"]
[connection signal="button_up" from="greenButton" to="." method="_on_greenButton_button_up"]
[connection signal="button_down" from="yellowButton" to="." method="_on_yellowButton_button_down"]
[connection signal="button_up" from="yellowButton" to="." method="_on_yellowButton_button_up"]
[connection signal="button_down" from="pinkButton" to="." method="_on_pinkButton_button_down"]
[connection signal="button_up" from="pinkButton" to="." method="_on_pinkButton_button_up"]
